[package]
name = "hepmc2"
version = "0.3.0"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
edition = "2018"
description = "Read and write files in the HepMC2 format"
readme = "Readme.md"
license = "GPL-3.0-or-later"
keywords = ["physics", "parser"]
categories = ["science", "parser-implementations"]
repository = "https://github.com/a-maier/hepmc2"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
nom = "6"
