[package]
name = "hepmc2"
version = "0.5.1"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
edition = "2021"
description = "Read and write files in the HepMC2 format"
readme = "Readme.md"
license = "GPL-3.0-or-later"
keywords = ["physics", "parser"]
categories = ["science", "parser-implementations"]
repository = "https://github.com/a-maier/hepmc2"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
nom = "7"
ryu = "1.0"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.4"
rand_xoshiro = "0.6.0"

[[bench]]
name = "benchmark"
harness = false
